--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand me-5" href="#">
                     <img src="images/logo.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -41,7 +41,7 @@
             </div>
         </nav>
         <!-- image slider -->
-        <section class="container">
+        <section class="container mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -129,44 +129,46 @@
             </div>
         </section>
         <section class="container" id="shoes">
-            <h2>Shoes</h2>
+            <h2 class="text-white">Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                <div class="col">
+                <div id="CARD" class="col">
                     <div class="card h-100 shadow-lg border-0">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <div class="card-body bg-secondary">
                             <h5 class="card-title">Supply 350</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text text-white">This is a wider card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit longer.</p>
                         </div>
-                        <div class="m-3">
+                        <div class="p-3 bg-secondary">
                             <button class="btn btn-warning">Buy Now</button>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div id="CARD" class="col">
                     <div class="card h-100 shadow-lg border-0">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <div class="card-body bg-secondary">
                             <h5 class="card-title">Nike 360</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            <p class="card-text text-white">This card has supporting text below as a natural lead-in to
+                                additional
                                 content.</p>
                         </div>
-                        <div class="m-3">
+                        <div class="p-3 bg-secondary">
                             <button class="btn btn-primary">Buy Now</button>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div id="CARD" class="col">
                     <div class="card h-100 shadow-lg border-0">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <div class="card-body bg-secondary">
                             <h5 class="card-title">Red Airmax</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            <p class="card-text text-white">This is a wider card with supporting text below as a natural
+                                lead-in to
                                 additional content. This card has even longer content than the first to show that equal
                                 height action.</p>
                         </div>
-                        <div class="m-3">
+                        <div class="p-3 bg-secondary">
                             <button class="btn btn-success">Buy Now</button>
                         </div>
                     </div>
@@ -174,44 +176,47 @@
             </div>
         </section>
         <section class="container my-4" id="backpack">
-            <h2>Backpack</h2>
+            <h2 class="text-white">Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                <div class="col">
+                <div id="CARD" class="col">
                     <div class="card h-100 shadow-lg border-0">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <div class="card-body bg-secondary">
                             <h5 class="card-title">Red Laltu Bag</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            <p class="card-text text-white">This is a wider card with supporting text below as a natural
+                                lead-in to
                                 additional content. This content is a little bit longer.</p>
                         </div>
-                        <div class="m-3">
+                        <div class="p-3 bg-secondary">
                             <button class="btn btn-warning">Buy Now</button>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div id="CARD" class="col">
                     <div class="card h-100 shadow-lg border-0">
                         <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <div class="card-body bg-secondary">
                             <h5 class="card-title">Blue Niltu Bag</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            <p class="card-text text-white">This card has supporting text below as a natural lead-in to
+                                additional
                                 content.</p>
                         </div>
-                        <div class="m-3">
+                        <div class="p-3 bg-secondary">
                             <button class="btn btn-primary">Buy Now</button>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div id="CARD" class="col">
                     <div class="card h-100 shadow-lg border-0">
                         <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <div class="card-body bg-secondary">
                             <h5 class="card-title">Black Kaltu Bag</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            <p class="card-text text-white">This is a wider card with supporting text below as a natural
+                                lead-in to
                                 additional content. This card has even longer content than the first to show that equal
                                 height action.</p>
                         </div>
-                        <div class="m-3">
+                        <div class="p-3 bg-secondary">
                             <button class="btn btn-success">Buy Now</button>
                         </div>
                     </div>
@@ -236,11 +241,20 @@
 
 
     </footer>
-
-
-
-
-    <script src="bootstrap.bundle.min.js"></script>
+    <script>
+        const shoeHead = document.getElementById('backpack');
+        shoeHead = document.body.style.backgroundColor = '#5F9EA0';
+        document.getElementById("CARD").style.borderRadius = "55px";
+        // document.getElementById('shoes-header').addEventListener('click',
+        //     function () {
+        //         document.body.style.backgroundColor = 'red';
+        //     }
+        // )
+        // const yellowButton = document.getElementById('make-yellow-button');
+        // yellowButton.onclick = function () {
+        //     document.body.style.backgroundColor = 'Yellow'
+        // }
+    </script>
 </body>
 
 </html>
